2007-04-02  Brian Kahne  <bkahne@freescale.com>

	* Added the Microsoft Studio project file to the distribution.

2007-02-23  Brian Kahne  <bkahne@freescale.com>

	* Port to Windows:  Added a Visual project file and various
	ifdef's to get this to compile on Windows.  You should be able to
	check this project out and simply build using the rnumber.

         file:///proj/.ppc_43/vc_noec/svn/rnumber release 2.1.3 (v2_1_3) on Linux (lb32001) on 2/13/2007 

         file:///proj/.ppc_43/vc_noec/svn/rnumber release 2.1.3 (v2_1_3) on Linux (lb32001) on 2/13/2007 

         file:///proj/.ppc_43/vc_noec/svn/rnumber release 2.1.3 (v2_1_3) on Linux (lb32001) on 2/13/2007 

         file:///proj/.ppc_43/vc_noec/svn/rnumber release 2.1.2 (v2_1_2) on Linux (lb32001) on 1/23/2007 

         file:///proj/.ppc_43/vc_noec/svn/rnumber release 2.1.2 (v2_1_2) on SunOS (sb0183) on 1/22/2007 

         file:///proj/.ppc_43/vc_noec/svn/rnumber release 2.1.2 (v2_1_2) on Linux (lb32001) on 1/22/2007 

2007-01-22  Brian Kahne  <bkahne@freescale.com>

	* Changed all instances of <stdint.h> to <inttypes.h>, as this
	header is supported on both Linux and Solaris.

         file:///proj/.ppc_43/vc_noec/svn/rnumber release 2.1.1 (v2_1_1) on Linux (lb0169) on 12/8/2006 

         file:///proj/.ppc_43/vc_noec/svn/rnumber release 2.1.1 (v2_1_1) on Linux (lb32001) on 12/8/2006 

         file:///proj/.ppc_43/vc_noec/svn/rnumber release 2.1.1 (v2_1_1) on Linux (lb32001) on 11/30/2006 

         file:///proj/.ppc_43/vc_noec/svn/rnumber release 2.1.1 (v2_1_1) on Linux (lb32001) on 11/30/2006 

         file:///proj/.ppc_43/vc_noec/svn/rnumber release 2.1.1 (v2_1_1) on Linux (lb0169) on 11/30/2006 

2006-11-30  Brian Kahne  <bkahne@freescale.com>

	* Added HTML documentation so that users can see the documentation
	even if they do not have skribe installed.

         file:///proj/.ppc_43/vc_noec/svn/rnumber release 2.1.0 (v2_1_0) on Linux (lb32001) on 11/30/2006 
