@@ -1,5 +1,8 @@
 2007-04-02  Brian Kahne  <bkahne@freescale.com>
 
+	* rnumber_features.h was not being distributed, so the Windows
+	build was broken.
+
 	* Added the Microsoft Studio project file to the distribution.
 
 2007-02-23  Brian Kahne  <bkahne@freescale.com>
